tests/neg-custom-args/deprecation/B_2.scala
class B {
  A.foo // error: deprecation
}
